Added support for Vatsim flights
Vatsim data collection working
Tracking condition implemented
Time connected logic still missing
Mostly working PMDG 737 gear handle logic, needs tuning
